# flutter_nes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/tech/dreamfund/flutter_nes/: FlutterNesPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/tech/dreamfund/flutter_nes_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_nes.podspec
ios/Classes/: FlutterNesPlugin.h  FlutterNesPlugin.m  SwiftFlutterNesPlugin.swift  binding.h
lib/: flutter_nes.dart
lib/src/: bridge.dart  native.dart  nes.dart  widget.dart
macos/: flutter_nes.podspec
macos/Classes/: FlutterNesPlugin.swift  bridge.h
src/: api.rs  bridge.rs  lib.rs
test/: flutter_nes_test.dart
