[package]
name = "fnes"
version = "0.1.0"
edition = "2018"


[lib]
name = "fnes"
crate-type = ["cdylib", "staticlib"]


[dependencies]
nes_rust = "0.1.2"
anyhow = "1.0.58"
flutter_rust_bridge = "1.41.0"
lazy_static = "1.4.0"
rawsample = "0.2.0"
glium = "0.32.1"
[build-dependencies]
cbindgen = "0.24.3"

##
#[profile.dev]
#panic = 'abort'

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
codegen-units = 1
strip = true